[package]
name = "gut"
version = "0.1.3"
authors = []
edition = "2021"

[dependencies]
toml = "0.8.16"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = { version = "4.5", features = ["derive", "string"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
log = "0.4.22"
color-backtrace = "0.6.1"
pretty_env_logger = "0.5.0"
prettytable-rs = "0.10.0"
colored = "2.1.0"
reqwest = { version = "0.12.5", features = ["blocking", "json", "gzip", "native-tls-vendored"], default-features = false }
graphql_client = "0.14.0"
dirs = "5.0"
walkdir = "2"
regex = "1.10.5"
# anders: git2 newest version is 0.19, but I ran into issues:
# "failed to select a version for `libgit2-sys" [...]
git2 = { version = "0.18.0", features = ["vendored-openssl"] }
git2_credentials = "0.13.0"
# git2_credentials = { git = "https://github.com/divvun/git2_credentials" }
dialoguer = { version = "0.11.0", features = ["password"] }
dryoc = "0.5.3"
base64 = "0.22.1"
uuid = { version = "1.10", features = ["serde", "v4"] }
rayon = "1.10"

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.10.1"
