[package]
name = "gut"
version = "0.2.0"
authors = []
edition = "2024"

[dependencies]
toml = "0.9.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = { version = "4.5", features = ["derive", "string"] }
thiserror = "2.0.17"
anyhow = "1.0.86"
log = "0.4.22"
color-backtrace = "0.7.2"
pretty_env_logger = "0.5.0"
prettytable-rs = "0.10.0"
colored = "3.0.0"
reqwest = { version = "0.12.5", features = ["blocking", "json", "gzip", "native-tls-vendored"], default-features = false }
graphql_client = "0.14.0"
dirs = "6.0.0"
walkdir = "2"
regex = "1.10.5"
# anders: git2 newest version is 0.19, but I ran into issues:
# "failed to select a version for `libgit2-sys" [...]
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
git2_credentials = "0.15.0"
# git2_credentials = { git = "https://github.com/divvun/git2_credentials" }
dialoguer = { version = "0.12.0", features = ["password"] }
dryoc = "0.7.0"
base64 = "0.22.1"
uuid = { version = "1.10", features = ["serde", "v4"] }
rayon = "1.10"

[dev-dependencies]
proptest = "1.5.0"
tempfile = "3.10.1"
