[package]
name = "gut"
version = "0.7.0"
authors = []
edition = "2024"

[dependencies]
toml = "0.9.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
clap = { version = "4.5", features = ["derive", "string"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
log = "0.4.29"
color-backtrace = "0.7.2"
pretty_env_logger = "0.5.0"
prettytable-rs = "0.10.0"
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["blocking", "json", "gzip", "native-tls-vendored", "http2"], default-features = false }
graphql_client = "0.16.0"
dirs = "6.0.0"
walkdir = "2"
regex = "1.12.3"
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
git2_credentials = "0.15.0"
# git2_credentials = { git = "https://github.com/divvun/git2_credentials" }
dialoguer = { version = "0.12.0", features = ["password"] }
dryoc = "0.7.1"
base64 = "0.22.1"
uuid = { version = "1.20", features = ["serde", "v4"] }
rayon = "1.11"
indicatif = "0.18"
unicode-normalization = "0.1"
urlencoding = "2"

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.25.0"

[profile.release]
strip = true
